2011-03-26  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (read_unc_volume): Use parameter `henum', instead of
	global variable `wget_enum_handle'.

	* keymap.c (describe_vector): Remove parameters `indices' and
	`char_table_depth', unused since 2002-03-01T01:43:26Z!handa@m17n.org.
	(describe_map, Fdescribe_vector): Adjust calls to `describe_vector'.

	* keyboard.h (timer_check, show_help_echo): Remove unused parameters.

	* keyboard.c (timer_check): Remove parameter `do_it_now',
	unused since 1996-04-12T06:01:29Z!rms@gnu.org.
	(show_help_echo): Remove parameter `ok_to_overwrite_keystroke_echo',
	unused since 2008-04-19T19:30:53Z!monnier@iro.umontreal.ca.

	* keyboard.c (read_char):
	* w32menu.c (w32_menu_display_help):
	* xmenu.c (show_help_event, menu_help_callback):
	Adjust calls to `show_help_echo'.

	* gtkutil.c (xg_maybe_add_timer):
	* keyboard.c (readable_events):
	* process.c (wait_reading_process_output):
	* xmenu.c (x_menu_wait_for_event): Adjust calls to `timer_check'.

	* insdel.c (adjust_markers_gap_motion):
	Remove; no-op since 1998-01-02T21:29:48Z!rms@gnu.org.
	(gap_left, gap_right): Don't call it.

2011-03-25  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (handle_fontified_prop): Discard changes to clip_changed
	incurred during fontification.

2011-03-25  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c (defvar_per_buffer): Remove unused parameter `doc'.
	(DEFVAR_PER_BUFFER): Don't pass it.

	* dispnew.c (row_equal_p, add_row_entry): Remove unused parameter `w'.
	(scrolling_window): Don't pass it.

2011-03-25  Juanma Barranquero  <lekktu@gmail.com>

	* dispextern.h (glyph_matric): Use #if GLYPH_DEBUG, not #ifdef.

	* fileio.c (check_executable) [DOS_NT]: Remove unused variables `len'
	and `suffix'.
	(Fset_file_selinux_context) [HAVE_LIBSELINUX]: Move here declaration
	of variables specific to SELinux and computation of `encoded_absname'.

	* image.c (XPutPixel): Remove unused variable `height'.
