@@ -1,3 +1,9 @@
+2011-03-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloc.c (garbage_collect): Don't assume stack size fits in int.
+	(stack_copy_size): Now size_t, not int.
+	(stack_copy, stack_copy_size): Define only if MAX_SAVE_STACK > 0.
+
 2011-03-26  Juanma Barranquero  <lekktu@gmail.com>
 
 	* w32.c (read_unc_volume): Use parameter `henum', instead of
